# atmo

./: CMakeLists.txt
data/shader/: atmo.fs  atmo.vs
include/: AtmoShader.hpp
src/: AtmoShader.cpp  main.cpp
